2020-02-05 Wiley E. Hill <wileyhill@gmail.com>

    * include/: Reluctantly include all of gtk.h:

          * include/geda_handlebox.h

    * src/widgets/geda_handlebox.c: Utilize macros:

          * geda_get_widget_style
          * geda_get_widget_window

2020-02-04 Wiley E. Hill <wileyhill@gmail.com>

    * include/geda_gtk_compat.h: Add macros geda_get_default_widget and
      add declaration for gdk_font_unref.

    * src/widgets/geda_font_dialog.c: Revise list_row_activated; remove
      unneeded cast, reverse logic of first conditional and eliminate
      setting window to NULL, and ancillary default_widget and utilize
      macros:

          * geda_get_default_widget
          * geda_get_focus_widget
          * gtk_dialog_get_content_area

      Replace gdk_drawable_get_display with gtk_widget_get_display in
      geda_font_dialog_get_font and eliminate ancillary GdkWindow.

    * src/widgets/geda_toggle_action.c: Set multikey_accel to NULL after
      releasing in geda_toggle_action_finalize.

2020-02-03 Wiley E. Hill <wileyhill@gmail.com>

    * src/widgets/geda_font_dialog.c: Reduce the scope of GtkRequisition in
      geda_font_dialog_update_preview and utilize geda_get_widget_requisition
      macro.

2020-01-31 Wiley E. Hill <wileyhill@gmail.com>

    * include/geda_gtk_compat.h: Only define GtkObject as GtkWidget if Gtk > 2.

    * src/functions/geda_widget.c: Add function geda_widget_get_allocated_width.

    * src/widgets/geda_bulb.c: Revise functions geda_bulb_draw_indicator and
      button_get_props to use type unsigned int.

    * src/widgets/geda_combobox.c: Replace gtk_widget_get_allocated_width with
      geda_widget_get_allocated_width in geda_combo_box_real_popup. Add
      ancillary pointer to cell_view in geda_combo_box_menu_row_inserted and
      utilize geda_get_child_widget macro.

2020-01-30 Wiley E. Hill <wileyhill@gmail.com>

    * src/widgets/geda_combobox.c: Add geda_combo_box_set_background_color